# price-elasticity

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-app.txt  requirements.txt
app/: requirements.txt  streamlit_app.py
app/.streamlit/: config.toml
configs/: project.toml
data/raw/: README.md  df_crossprice_previous.csv  df_elasticity_previous.csv
data/sample/: price_observations.csv
docs/: deployment.md
models/: model_card.json  pipeline.joblib
notebooks/: 00_business_understanding.ipynb  01_data_understanding.ipynb  02_exploratory_analysis.ipynb  03_feature_engineering.ipynb  04_modeling_and_business_results.ipynb  05_deployment_and_consumption.ipynb  README.md  price-elasticity.ipynb
reports/: data_profile.json  elasticity_summary.json  price_elasticity.csv
src/: config.py  data_loader.py  pipeline.py  predict.py  preprocessing.py  train.py
src/price_elasticity/: __init__.py  analysis.py  api.py  cli.py  config.py  data.py  features.py  models.py
tests/: test_pipeline.py  test_project_contract.py
